自定义切片扫描